--- a/Blogg/static/Blogg/css/text.css
+++ b/Blogg/static/Blogg/css/text.css
@@ -26,8 +26,8 @@
     gap: 15px;
   }
   button {
-    height: 28px;
-    width: 28px;
+    height: 40px;
+    width: 40px;
     display: grid;
     place-items: center;
     border-radius: 3px;
@@ -82,4 +82,8 @@
       background-color: #ff6719;
       color: white;
       border:0px;
+  }
+  .fa-solid
+  {
+    font-size: 25px;
   }
