--- a/Blogg/templates/index.html
+++ b/Blogg/templates/index.html
@@ -15,11 +15,13 @@
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     {% load static %}
+    <script defer src="{% static 'Blogg/javascript/animation.js' %}"></script>
     <link rel="stylesheet" href="{% static 'Blogg\css\utilities.css' %}" />
     <link rel="stylesheet" href="{% static 'Blogg\css\style.css' %}" />
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -38,7 +40,19 @@
           <button class="btn me-2 text-white  border-white btn-outline-success" type="submit">
             Search
           </button>
-        <a  class="col" href="signup.html"><button type="button" class="btn me-1 my-btn text-nowrap ">Sign Up</button></a>
+        <!-- Example single danger button -->
+<div class="btn-group">
+  <button type="button border-white" style=".dropdown-menu[data-bs-popper] {
+    top: 100%;left: -138%;}" class=" btn my-bg dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+    <i class="fa-solid fa-user" style="color: #ffffff;"></i>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Profile</a></li>
+    <li><a class="dropdown-item" href="#">Blogs</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="#">Logout</a></li>
+  </ul>
+</div>
       </div>
     </form>
     </nav>
@@ -49,7 +63,7 @@
         <blockquote class=" d-flex align-items-center blockquote"></blockquote>
         <div class="content text-center">
           <figure class="text-center">
-            <blockquote class="blockquote text-white fs-1">
+            <blockquote  id="quote" class="blockquote text-white fs-1">
               <p>"Your words have the power to shape worlds, so let your thoughts dance on the page and paint a canvas
                 of inspiration for others to behold."</p>
             </blockquote>
@@ -60,7 +74,7 @@
 
         </div>
         <div class="d-grid text-center gap-2 col-6 mx-auto ">
-          <a href="/texteditor.html" target="_blank"><button class="btn  btn-lg my-btn m-4 fs-3" type="button">Start Writing!</button></a>
+          <a href="{% url 'texteditor' %}" target="_blank"><button class="btn  btn-lg my-btn m-4 fs-3" type="button">Start Writing!</button></a>
         </div>
       </div>
       <div class="col-md-6 m-0 p-0 text-center order-1"><img src="{% static 'Blogg\images\hero_image.png' %}" id="hero-image" alt=""></div>
@@ -77,7 +91,7 @@
   <div class="blog-categoires">
     <ul class=" navbar-nav  nav-underline fs-3 m-3 border-bottom flex-row  justify-content-between ">
       <li class="nav-item">
-        <a class="nav-link text-black" href="#blogs">Featured</a>
+        <a class="nav-link text-black" href="">Featured</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-black" href="#">Social</a>
@@ -182,6 +196,9 @@
 
   </footer>
   <!-- footer ends here -->
+  <script>
+
+  </script>
 
 </body>
 
