completed with categories section

--- a/Blogg/templates/blogs.html
+++ b/Blogg/templates/blogs.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
-        {% load static %}
+    {% load static %}
     <link rel="Website icon" type="png" href="{% static 'Blogg\images\icon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -32,10 +32,10 @@
             <a class="navbar-brand text-center" href="index.html">
                 <i class="fa-regular fa-bookmark fa-3x m-2" style="color: #ff6719"></i>
             </a>
-            <a class="nav-link d-flex align-items-center  text-green" href="index.html">
-                <span  class="fs-3 me-2 "> Showcase your thoughts here!</span>
-                <button class="btn my-btn btn-lg"> Start Writing</button>
-            </a>
+            <div class="nav-link d-flex align-items-center  text-green">
+                <span class="fs-3 me-2 "> Showcase your thoughts here!</span>
+                <button class="fs-3 border-radius-1 rounded  my-btn"><a class="text-white" href="/texteditor">Start Writing</a> </button>
+            </div>
         </div>
     </nav>
     <!-- nav ends -->
@@ -49,7 +49,7 @@
                 <!-- <img src="images/icon.png" class="rounded-5 img-fluid p-1 m-1"> -->
                 <h3 class="display-1 text-green">Substack</h3>
             </div>
-            
+
             <p class="fs-5">News and announcements for all things Bootstrap, including new releases, Bootstrap Themes,
                 and Bootstrap Icons.</p>
             <nav class="nav  flex-column fs-3 ">
@@ -62,40 +62,55 @@
         <!-- blog left side end -->
         <!-- blog right side  -->
         <div class="col">
+            
             <div class="display-4 mb-2">
-                Wars Won. Mental Health Destroyed
-
+                {{ blog.title }}
+                
             </div>
             <div class=" d-flex justify-content-start align-items-center mb-2 p-1 ps-0">
                 {% load static %}
-                <img src="{% static 'Blogg\images\ruskin-bond.jpg' %}" width="30px" alt="" class="rounded-circle me-2">
-                <span class="h5 me-2 mb-0">Ruskin Bond</span>
+                <img src="{% static 'Blogg\images\user_icon.png' %}" width="70px" alt="" class="rounded-circle me-2">
+                <span class="h5 me-2 mb-0">{{blog.author}}</span>
                 <i class="fa-regular fa-calendar-days me-2 fa-2x"></i>
-                <span  class="h5 me-2 mb-0">23 july 2003</span>
-                            </div>
-                            <h3 class="text-end">Arts and Humanities </h3>
+                <span class="h5 me-2 mb-0">{{blog.date_published.date}}</span>
+            </div>
+            <h3 class="text-end">{{blog.category}} </h3>
             <hr class="">
             <div class="article text-center">
                 {% load static %}
-                <img class="m-2 mx-auto " src="{% static 'Blogg\images\art.jpg' %}" height="400px" alt="nhi aarhi image">
-                <p class="fs-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, alias sequi totam distinctio, facere dolor eius accusantium in fugiat excepturi architecto accusamus illum consequatur perferendis cumque consectetur reprehenderit. Quas magnam fugiat cum sed! Placeat ut minima, explicabo eligendi non veniam nobis, illum ad dicta atque perspiciatis, esse voluptatem dolore repudiandae?</p>
+                <img class="m-2 mx-auto " src='{{ blog.image.url }}' height="400px" alt="nhi aarhi image">
+                <p class="fs-5"><span>{{ blog.content }}</span>
+                     <!-- Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Et, alias sequi totam distinctio, facere dolor eius accusantium in fugiat excepturi architecto
+                    accusamus illum consequatur perferendis cumque consectetur reprehenderit. Quas magnam fugiat cum
+                    sed! Placeat ut minima, explicabo eligendi non veniam nobis, illum ad dicta atque perspiciatis, esse
+                    voluptatem dolore repudiandae?</p>
                 <h3 class="h3 ">Lorem ipsum dolor sit amet.</h3>
-                <p class="fs-5">Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia qui debitis minima aut, ratione voluptatum ad nesciunt, veritatis facilis corrupti id quasi. Soluta vero omnis perspiciatis ea. Dolorem voluptates laudantium totam deleniti autem. Expedita commodi quo, nam, exercitationem est nisi aperiam nihil hic fuga, delectus nulla unde incidunt veritatis libero dignissimos inventore praesentium dolor totam quis dolorem. Odio, explicabo eius! sitl Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque officiis vero provident, harum eligendi reiciendis illum iste? Quae minus deserunt doloribus ea voluptate ipsa officia voluptas a? Fugit nihil atque tempora necessitatibus! Nobis odio ipsum reprehenderit quidem sequi dolores beatae debitis sint ullam porro laudantium eveniet quos, quam, atque corrupti a culpa iusto unde nisi? Cupiditate totam incidunt esse tempore?</p>
+                <p class="fs-5">Lorem ipsum dolor Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia qui
+                    debitis minima aut, ratione voluptatum ad nesciunt, veritatis facilis corrupti id quasblog. Soluta vero
+                    omnis perspiciatis ea. Dolorem voluptates laudantium totam deleniti autem. Expedita commodi quo,
+                    nam, exercitationem est nisi aperiam nihil hic fuga, delectus nulla unde incidunt veritatis libero
+                    dignissimos inventore praesentium dolor totam quis dolorem. Odio, explicabo eius! sitl Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Neque officiis vero provident, harum eligendi
+                    reiciendis illum iste? Quae minus deserunt doloribus ea voluptate ipsa officia voluptas a? Fugit
+                    nihil atque tempora necessitatibus! Nobis odio ipsum reprehenderit quidem sequi dolores beatae
+                    debitis sint ullam porro laudantium eveniet quos, quam, atque corrupti a culpa iusto unde nisi?
+                    Cupiditate totam incidunt esse tempore?</p> -->
             </div>
-
+            
         </div>
         <!-- blog right side ends -->
         <!-- footer  -->
         <footer class="row  p-3 text-bg-secondary">
             <div class="text-center">
-            <h2>Follow Us On</h2>
+                <h2>Follow Us On</h2>
             </div>
             <div class=" text-white text-center">
-            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-facebook p-1 me-1"></i></a>
-            <a href="#" target="_blank"><i style="color: white;"class="fab fa-2x fa-twitter p-1 me-1"></i></a>
-            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-instagram p-1 me-1"></i></a>
-            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-linkedin p-1 me-1"></i></a>
-        </div>
+                <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-facebook p-1 me-1"></i></a>
+                <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-twitter p-1 me-1"></i></a>
+                <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-instagram p-1 me-1"></i></a>
+                <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-linkedin p-1 me-1"></i></a>
+            </div>
 
         </footer>
         <!-- footer ends here -->
