--- a/Blogg/templates/index.html
+++ b/Blogg/templates/index.html
@@ -21,6 +21,15 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
+    <style>
+      .image-height
+{
+    height: 300px;
+    width: 100%;
+    border-radius: 5%;
+}
+
+    </style>
     
 </head>
 
@@ -35,22 +44,24 @@
         <a href="#" class="navbar-brand primary-color mt-2 fs-1 text-white">SUBSTACK</a>
       </div>
       <div class="d-none col-4 d-lg-block row m-0  align-items-center  ">
-        <form class=" d-flex" role="search">
-          <input class="form-control  me-2" type="search" placeholder="Search" aria-label="Search" />
+        <form action="{% url 'search' %}" class=" d-inline-flex mx-0 col-10" method="post" role="search">
+          {% csrf_token %}
+          <input class="form-control d-inline-flex  me-2" type="search" placeholder="Search" name="search" aria-label="Search" />
           <button class="btn me-2 text-white  border-white btn-outline-success" type="submit">
             Search
           </button>
+        </form>
+
         <!-- Example single danger button -->
-<div class="btn-group">
-  <button type="button border-white" style=".dropdown-menu[data-bs-popper] {
-    top: 100%;left: -138%;}" class=" btn my-bg dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="col-1 d-inline-flex btn-group rounded-1 dropstart">
+  <button type="button  border-white"  class=" btn my-bg dropdown-toggle"  data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
     <i class="fa-solid fa-user" style="color: #ffffff;"></i>
   </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Profile</a></li>
-    <li><a class="dropdown-item" href="#">Blogs</a></li>
+  <ul class="dropdown-menu dropdown-menu-start dropdown-menu-lg-start">
+    <li><a class="dropdown-item" href="/edit_profile">Edit Profile</a></li>
+    <li><a class="dropdown-item" href="/my_blogs">Blogs</a></li>
     <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Logout</a></li>
+    <li><a class="dropdown-item" href="/login">Logout</a></li>
   </ul>
 </div>
       </div>
@@ -91,53 +102,58 @@
   <div class="blog-categoires">
     <ul class=" navbar-nav  nav-underline fs-3 m-3 border-bottom flex-row  justify-content-between ">
       <li class="nav-item">
-        <a class="nav-link text-black" href="">Featured</a>
+        <a class="nav-link text-black" id="all_blogs" href="#blogs">Featured</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black" href="#">Social</a>
+        <a class="nav-link text-black" id="social" href="{% url 'partial_template' category='Social' %}#blogs">Social</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-black" href="#">Political</a>
+        <a class="nav-link text-black"id="political" href="{% url 'partial_template' category='Political' %}#blogs">Political</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link text-black" href="#">Cultural</a>
+        <a class="nav-link text-black" id="cultural" href="{% url 'partial_template' category='Cultural' %}#blogs">Cultural</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black" href="#">Technology</a>
+        <a class="nav-link text-black" id="tech" href="{% url 'partial_template' category='Technology' %}#blogs">Technology</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-black" href="#">Education</a>
+        <a class="nav-link text-black" id="education" href="{% url 'partial_template' category='Education' %}#blogs" href="#blogs">Education</a>
       </li>
      
 
     </ul>
 
   </div>
-  <div class="blogs" id="blogs">
+  <div class="blogs"   >
     <div class="row m-0 align-items-center">
       <i class="col-auto fa-solid fa-arrow-trend-up fa-2x"></i>
       <h3 class="col m-2 "> Trending Blogs </h3>
     </div>
-    <div class=" row m-0 justify-content-center ">
-      
-      <div class="blog-box col-lg-4 col-10 border-end ">
+    <div id="blogs" class=" row m-0 justify-content-center ">
+
+      {% for i in keypost %}
+      <div style="max-height: 500px; overflow: hidden;" class="blog-box col-lg-4 col-10 border-end p-4">
         <div class=" d-flex flex-column mb-3">
-          <div class="p-2"><img class="image-height" src="{% static 'Blogg\images\computer.jpg' %}"  alt="Technology"></div>
+          
+          <div class="p-2"><img class="image-height" src= '{{ i.image.url }}'   alt="Technology"></div>
           <div class="p-2 row m-0">
-            <h3 class="col-6 ">Computers-Master or Slave</h3><a class="col-6 text-end" href="blogs.html"><i
+            <h3 class="col-9 ">{{ i.title }}</h3>
+            <a class="col-3 text-end" href="{% url 'blogs' pk=i.id %}"><i
                 class=" fa-2x fa-solid  fa-arrow-up-right-from-square" style="color: #000000; "></i></a>
           </div>
+          <h3 class="text-muted p-4">{{ i.category }}</h3>
           <div class="p-2">
             <p class="p-2">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus pariatur sequi voluptates quae fugit,
-              excepturi aliquam blanditiis consectetur porro placeat.
+             {{ i.content }}
             </p>
 
           </div>
         </div>
       </div>
+      {% endfor %}
+      
   
-      <div class="blog-box col-lg-4 col-10 border-end">
+      <!-- <div class="blog-box col-lg-4 col-10 border-end">
         <div class="  d-flex flex-column mb-3">
           <div class="p-2"><img class="image-height" src="{% static 'Blogg\images\art.jpg' %}"  alt="art"></div>
           <div class="p-2 row m-0">
@@ -166,14 +182,16 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
     
     </div>
   </div>
+  
 
   <div class="mt-4 pt-4 text-center display-2">
     <p>Get Started in Minutes</p>
-    <button class="btn my-btn m-2 fs-3 ">
+    <button  class="btn my-btn m-2 fs-3 ">
+      
       Create your Substack!
     </button>
   </div>
@@ -196,9 +214,8 @@
 
   </footer>
   <!-- footer ends here -->
-  <script>
+  
 
-  </script>
 
 </body>
 
