--- a/Blogg/templates/login.html
+++ b/Blogg/templates/login.html
@@ -28,6 +28,15 @@
 </head>
 
 <body>
+    <!-- nav -->
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand text-center" href="index.html">
+                <i class="fa-regular fa-bookmark fa-3x m-2" style="color: #ff6719"></i>
+            </a>
+        </div>
+    </nav>
+    <!-- nav ends -->
     <form method="post">
         
         <div class="px-0 container-fluid row justify-content-center m-0 ">
@@ -51,6 +60,20 @@
             </div>
         </div>
     </form>
+    <!-- footer  -->
+    <footer class="row my-3 m-0  p-3 text-bg-secondary">
+        <div class="text-center">
+            <h2>Follow Us On</h2>
+        </div>
+        <div class=" text-white text-center">
+            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-facebook p-1 me-1"></i></a>
+            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-twitter p-1 me-1"></i></a>
+            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-instagram p-1 me-1"></i></a>
+            <a href="#" target="_blank"><i style="color: white;" class="fab fa-2x fa-linkedin p-1 me-1"></i></a>
+        </div>
+
+    </footer>
+    <!-- footer ends here -->
 
 </body>
 
